fix(shared/card-settings): internal alignment again -_-, capitalize language, fix undefined deck

--- a/src/app/shared/components/card-settings/card-settings.component.css
+++ b/src/app/shared/components/card-settings/card-settings.component.css
@@ -1,8 +1,9 @@
 .card-settings-wrapper {
 
   display: grid;
-  grid-template-columns: max-content max-content;
   justify-content: center;
+  align-items: center;
+  grid-template-columns: max-content max-content;
   gap: 50px;
   width: fit-content;
 
