--- a/src/app/shared/components/card-settings/card-words-list/card-words-list.component.css
+++ b/src/app/shared/components/card-settings/card-words-list/card-words-list.component.css
@@ -20,7 +20,6 @@
 
   display: flex;
   align-items: center;
-  /* align-self: start; */
 
   gap: 8px;
   padding: 6px 15px;
@@ -30,6 +29,7 @@
 .title-wrapper h3 {
   font-size: 1.05rem;
   color: var(--text-secondary);
+  text-transform: capitalize;
 }
 
 .title-wrapper img {
